--- a/src/MovieItem.css
+++ b/src/MovieItem.css
@@ -1,6 +1,7 @@
 .item {
   border: 1px solid lightpink;
   display: flex;
+  flex-wrap:wrap;
   padding: 15px;
   margin-bottom: 15px;
   background: rgb(238, 174, 202);
@@ -9,12 +10,16 @@
     rgba(238, 174, 202, 1) 0%,
     rgba(148, 187, 233, 1) 100%
   );
+
 }
 .content {
   padding: 15px;
+  min-width: 500px;
+  max-width: 55vw;
 }
 .image img {
   width: 500px;
+  min-width: 500px;
 }
 .header {
     width: 100%;
